# draugr

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pyup.yml  .travis.yml  DraugrPackage.py  KEYWORDS.md  MANIFEST.in  README.md  dependabot.yml  environment.yaml  requirements.txt  requirements_dev.txt  requirements_docs.txt  requirements_drawers.txt  requirements_setup.txt  requirements_tests.txt  requirements_torch.txt  requirements_writers.txt  setup.py  tox.ini  version.py
.conda/: meta.yaml
.github/: CONTRIBUTING.md  dependabot.yml
benchmarks/: generator_vs_dataloader.py  matlab_conversion.py  pyperf_tryout.py
docs/: CNAME  Makefile  clean.bat  clean.sh  index.html  make.bat  make.sh
draugr/: README.md  __init__.py  draugr.py  stopping_key.py  version.py
requirements/: requirements_dev.txt  requirements_docs.txt  requirements_drawers.txt  requirements_extensions.txt  requirements_jax.txt  requirements_linux.txt  requirements_tests.txt  requirements_torch.txt  requirements_tqdm.txt  requirements_visualisation.txt  requirements_writers.txt
samples/: README.md  audio_spectrogram_plot.py  monochrome_visualisation.py
samples/temporal_samples/parralel_pipeline/: .gitignore  pyproject.toml
samples/temporal_samples/parralel_pipeline/entry_points/: delete_schedule.py  run_worker.py  run_workflow.py
samples/temporal_samples/parralel_pipeline/pipeline/: config.py
samples/temporal_samples/parralel_pipeline/pipeline/activities/: activity2.py
tests/: req_unit_test.py  test_imports.py  test_plot.py  test_sanity.py  test_statistics.py  (+1 more)
(+1135 files in other folders)
